--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+/* <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">  */
 body{
-    height: 2000px;
+    font-family: 'Poppins', sans-serif;
 }
-main .ready{
-    background-color: #289BDE;
-    color: #ffffff;
-    padding: 30px 15px;
-    margin-top: 20px;
-    
-}
-.ready .media .button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.ready .media .button p{
-    background-color: #ffffff;
-    color: #289BDE;
-    height: 50px;
-    padding: 10px 10px 0px 10px;
-}
-
